--- a/src/features/video/components/video.component.html
+++ b/src/features/video/components/video.component.html
@@ -27,7 +27,9 @@
       </span>
       <p>{{ videoDuration }}</p>
     </div>
+
     <button
+      (click)="downloadVideo()"
       class="video-text_download btn-primary"
       [orgText]="{
       ENG: 'Download',
@@ -40,6 +42,7 @@
 
     @if (isOwn) {
     <button
+      (click)="deleteVideo(videoData)"
       class="video-text_delete btn-err"
       [orgText]="{
         ENG: 'Delete',
