--- a/src/widgets/requests/components/requests.component.scss
+++ b/src/widgets/requests/components/requests.component.scss
@@ -13,9 +13,16 @@
       background: transparent;
       outline: none;
       border: none;
+      transition: 0.3s;
       cursor: pointer;
 
       &.active {
+        &:nth-child(1) {
+          box-shadow: inset -8px 0px 5px -5px $transparent-grey;
+        }
+        &:nth-child(2) {
+          box-shadow: inset 8px 0px 5px -5px $transparent-grey;
+        }
         color: $prime-green;
       }
     }
